--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    width: 25%;
+    width: 350px;
     border-radius: 15px;
     transform: translate(0px, 90px);
 }
